--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "phpro/grumphp": "^1.3",
         "vimeo/psalm": "^4.7",
         "squizlabs/php_codesniffer": "^3.6",
-        "phpmd/phpmd": "^2.10"
+        "phpmd/phpmd": "^2.10",
+        "codeception/codeception": "^4.1",
+        "codeception/module-asserts": "^1.0.0"
     },
     "license": "MIT",
     "authors": [
